syntax = "proto3";

package shitlist.v1;

option go_package = "github.com/mikeder/shitlist/pkg/go/shitlist/v1;shitlistv1";

// external deps
import "validate/validate.proto";

// ShitlistService provides shitty service.
service ShitlistService {
  // Click records a click action by a user.
  rpc Click(ClickRequest) returns (ClickResponse) {}

  // Leaders returns the top 10 clickers.
  rpc Leaders(LeadersRequest) returns (LeadersResponse){}
}

// ClickRequest is a request to record a click event.
message ClickRequest {
  // user_id of the user to record a click event for.
  string user_id = 1 [(validate.rules).string.uuid = true];
}

// ClickResponse is a response to a click event.
message ClickResponse {
  // clicks recorded for the user.
  uint64 clicks = 1;
}

// LeadersRequest is a request for the top clickers.
message LeadersRequest {}

// Clicker represents a single clicker user.
message Clicker {
  // user_id of the user thats clicking.
  string user_id = 1 [(validate.rules).string.uuid = true];

  // clicks is the number of times the user has clicked.
  uint64 clicks = 2;
}

// LeadersResponse is the top clickers.
message LeadersResponse {
  // top_clickers are the top 10 clicking users.
  repeated Clicker top_clickers = 1;
}